[package]
name = "ivm-core"
version = "0.1.1-SNAPSHOT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ivm-compile = { path = "../ivm-compile" }
ivm-vm = { path = "../ivm-vm" }

[dev-dependencies]
criterion = { version = "0.3.6", features = ["html_reports"] }

[[bench]]
name = "benches"
harness = false
